--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ cover-img:
 <h2>Seasonal Menu</h2>
 
 <div class="container-fluid">
-    <!-- First Row -->
+    <!-- First Roww -->
     <div class="row">
         <!-- Column 1 -->
         <div class="col-lg-4 col-md-6 mb-4">
