--- a/index.html
+++ b/index.html
@@ -6,85 +6,66 @@ cover-img:
 - /assets/img/bread.jpg
 ---
 
-<h2>Best Sellers</h2>
+<h1 class="text-center">Best Sellers</h1>
 
-<!-- Use it in your main page like this: -->
-
-
-
-<div class="container-fluid">
     
-    <!-- First Roww -->
+<!-- Use it in your main page like this: -->
+    
+    <!-- First Row -->
     <div class="row">
-        <!-- Column 1 -->
+        <!-- Column 1 (Teacher Boxes) -->
         {% include card.html image='/assets/img/teacher-box.jpg' title='Teacher Boxes' text='$5'
-        modal_target='#modal1' alt='Poop' %}
+        modal_target='#modalTeacherBoxes' alt='Teacher Boxes' %}
+        {% include modal.html modal_id='modalTeacherBoxes' modal_title='Christmas Best Sellers' modal_alt='Teacher Boxes' modal_body='...' modal_image='/assets/img/teacher-box.jpg' %}
 
-        <!-- Column 2 UPDATE TO BUCKEYES--> 
-        {% include card.html image='/assets/img/buckeyes.jpg' title='Buckeyes CONTAINS PEANUTS PEOPLE' text='$69' 
-        modal_target='#modal1' alt='Thumbprint Cookies' %}
+        <!-- Column 2 (Buckeyes) --> 
+        {% include card.html image='/assets/img/buckeyes.jpg' title='Buckeyes' text='$69' 
+        modal_target='#modalBuckeyes' alt='Buckeyes' %}
+        {% include modal.html modal_id='modalBuckeyes' modal_title='Christmas Best Sellers' modal_alt='Buckeyes' modal_body='...' modal_image='/assets/img/buckeyes.jpg' %}
 
-        <!-- Column 3 UPDATE TO CASHEWS-->
-        {% include card.html image='/assets/img/cashews.jpg' title='Chocolate Covered Sea Salt Cashews' text='$69'
-        modal_target='#modal1' alt='Grinch Cookies' %}
-
+        <!-- Column 3 (Chocolate Covered Sea Salt Cashews) -->
+        {% include card.html image='/assets/img/cashews.jpg' title='Chocolate Covered Cashews' text='$69'
+        modal_target='#modalCashews' alt='Chocolate Covered Sea Salt Cashews' %}
+        {% include modal.html modal_id='modalCashews' modal_title='Christmas Best Sellers' modal_alt='Chocolate Covered Sea Salt Cashews' modal_body='...' modal_image='/assets/img/cashews.jpg' %}
     </div>
 
-    <h2>Full Christmas Menu</h2>
-
-    <!-- First Roww -->
-    <div class="row">
-        <!-- Column 1 -->
-        {% include card.html image='/assets/img/box.jpg' title='Christmas Cookie Tray' text='$40 Per Tray / 2 for $75'
-        modal_target='#modal1' alt='Christmas Cookie Tray' %}
-
-        <!-- Column 2 -->
-        {% include card.html image='/assets/img/thumbprint.jpg' title='Thumbprint Cookies' text='$FREE' 
-        modal_target='#modal1' alt='Thumbprint Cookies' %}
-
-        <!-- Column 3 -->
-        {% include card.html image='/assets/img/grinch.jpg' title='Grinch Cookies' text='$Ask'
-        modal_target='#modal1' alt='Grinch Cookies' %}
-
-    </div>
+    <h2 class="text-center">Full Christmas Menu</h2>
 
     <!-- Second Row -->
     <div class="row">
         <!-- Column 1 -->
+        {% include card.html image='/assets/img/box.jpg' title='Christmas Cookie Tray' text='$40 Per Tray / 2 for $75'
+        modal_target='#modalChristmasCookieTray' alt='Christmas Cookie Tray' %}
+        {% include modal.html modal_id='modalChristmasCookieTray' modal_title='Christmas Menu' modal_alt='Christmas Cookie Tray' modal_body='...' modal_image='/assets/img/box.jpg' %}
+
+        <!-- Column 2 (Thumbprint Cookies) -->
+        {% include card.html image='/assets/img/thumbprint.jpg' title='Thumbprint Cookies' text='$FREE' 
+        modal_target='#modalThumbprintCookies' alt='Thumbprint Cookies' %}
+        {% include modal.html modal_id='modalThumbprintCookies' modal_title='Christmas Menu' modal_body='...' modal_alt='Thumbprint Cookies' modal_image='/assets/img/thumbprint.jpg' %}
+
+        <!-- Column 3 (Grinch Cookies) -->
+        {% include card.html image='/assets/img/grinch.jpg' title='Grinch Cookies' text='$Ask'
+        modal_target='#modalGrinchCookies' alt='Grinch Cookies' %}
+        {% include modal.html modal_id='modalGrinchCookies' modal_title='Christmas Menu' modal_body='...' modal_alt='Grinch Cookies' modal_image='/assets/img/Grinch.jpg' %}
+
+        <!-- Column 1 (Buckeyes) -->
         {% include card.html image='/assets/img/buckeyes.jpg' title='Buckeyes' text='$6,000'
-        modal_target='#modal1' alt='Gingerbread Cookies' %}
+        modal_target='#modalBuckeyesLarge' alt='Buckeyes' %}
+        {% include modal.html modal_id='modalBuckeyesLarge' modal_title='Christmas Menu' modal_body='...' modal_alt='Buckeyes' modal_image='/assets/img/buckeyes.jpg' %}
 
-        <!-- Column 2 -->
-        {% include card.html image='/assets/img/oatmeal-shortbread.jpg' title='Oatmeal Shortbread Cookies' text='$FREE' 
-        modal_target='#modal1' alt='Thumbprint Cookies' %}
+        <!-- Column 2 (Oatmeal Shortbread Cookies) -->
+        {% include card.html image='/assets/img/oatmeal-shortbread.jpg' title='Oatmeal Shortbread' text='$FREE' 
+        modal_target='#modalOatmealShortbread' alt='Oatmeal Shortbread Cookies' %}
+        {% include modal.html modal_id='modalOatmealShortbread' modal_title='Christmas Menu' modal_body='...' modal_alt='Oatmeal Shortbread Cookies' modal_image='/assets/img/oatmeal-shortbread.jpg' %}
 
-        <!-- Column 3 -->
-        {% include card.html image='/assets/img/cashews.jpg' title='Chocolate Covered Sea Salt Cashews' text='$Ask'
-        modal_target='#modal1' alt='Grinch Cookies' %}
-    </div>
+        <!-- Column 3 (Chocolate Covered Sea Salt Cashews) -->
+        {% include card.html image='/assets/img/cashews.jpg' title='Chocolate Covered Cashews' text='$69'
+        modal_target='#modalCashews' alt='Chocolate Covered Sea Salt Cashews' %}
+        {% include modal.html modal_id='modalCashews' modal_title='Christmas Menu' modal_body='...' modal_alt='Chocolate Covered Sea Salt Cashews' modal_image='/assets/img/cashews.jpg' %}
 
-    <div class="row">
-    <!-- Column 1 -->
+        <!-- Column 1 (Gingerbread Cookies) -->
         {% include card.html image='/assets/img/gingerbread.jpg' title='Gingerbread Cookies' text='$6,000'
-        modal_target='#modal1' alt='Gingerbread Cookies' %}
-    </div>
-</div>
-
-<!-- Modal -->
-<div class="modal fade" id="modal1" tabindex="-1" role="dialog" aria-labelledby="modalLabel1" aria-hidden="true">
-    <div class="modal-dialog" role="document">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="modalLabel1">Modal Title 1</h5>
-                <button type="button" class="btn-close" data-dismiss="modal" aria-label="Close"></button>
-            </div>
-            <div class="modal-body">
-                Your modal content for card 1 goes here.
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary">Save changes</button>
-            </div>
-        </div>
+        modal_target='#modalGingerbreadCookies' alt='Gingerbread Cookies' %}
+        {% include modal.html modal_id='modalGingerbreadCookies' modal_title='Christmas Menu' modal_body='...' modal_alt='Gingerbread Cookies' modal_image='/assets/img/gingerbread.jpg' %}
     </div>
 </div>
