--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ cover-img:
         <!-- Column 3 (Chocolate Covered Sea Salt Cashews) -->
         {% include card.html image='/assets/img/cashews.jpg' title='Chocolate Covered Cashews' text='$69'
         modal_target='#modalCashews' alt='Chocolate Covered Sea Salt Cashews' %}
-        {% include modal.html modal_id='modalCashews' modal_title='Christmas Best Sellers' modal_alt='Chocolate Covered Sea Salt Cashews' modal_body='...' modal_image='/assets/img/cashews.jpg' %}
+        {% include modal.html modal_id='modalCashews' modal_title='Christmas Best Sellers' modal_alt='Chocolate Covered Sea Salt Cashews' modal_body="The holidays wouldn't be complete without some form of chocolate making a surprise appearance. These Chocolate Covered Sea Salt Cashew Clusters are hand dipped and composed of 2-3 whole Cashews covered in nothing but delicious chocolate.They will be available in 4oz bags as well as part of our Christmas cookie trays." modal_image='/assets/img/cashews.jpg' %}
     </div>
 
     <h2 class="text-center">Full Christmas Menu</h2>
