--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 layout: home
 title: Thymeless Treats Bakery
 subtitle: stuff about treats stuff
-cover-img:
-- /assets/img/bread.jpg
+cover-img: ["/assets/img/headers/home/bread.jpg", "/assets/img/headers/home/cookies.jpg", "/assets/img/headers/home/cupcakes.jpg", "/assets/img/headers/home/thumbprints.jpg", "/assets/img/headers/home/valentines.jpg"] 
 ---
     
 <div class="row justify-content-center">
