--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: home
 title: Thymeless Treats Bakery
 subtitle: stuff about treats stuff
-cover-img: ["/assets/img/headers/home/bread.jpg", "/assets/img/headers/home/cookies.jpg", "/assets/img/headers/home/cupcakes.jpg", "/assets/img/headers/home/thumbprints.jpg", "/assets/img/headers/home/heartCookies.jpg"] 
+cover-img: ["/assets/img/headers/home/bread.jpg", "/assets/img/headers/home/cookies.jpg", "/assets/img/headers/home/cupcakes.jpg", "/assets/img/headers/home/thumbprints.jpg", "/assets/img/headers/home/heartCookies.jpg", "/assets/img/headers/home/cupcakes2.jpg", "/assets/img/headers/home/cupcakes3.jpg", "/assets/img/headers/home/halloweenBox.jpg", "/assets/img/headers/home/muffins.jpg"] 
 ---
     
 <div class="row justify-content-center">
