--- a/christmas.html
+++ b/christmas.html
@@ -2,7 +2,10 @@
 layout: home
 title: Thymeless Treats Bakery
 subtitle: stuff about treats stuff
-cover-img: ["/assets/img/headers/christmas/cookies.jpg", "/assets/img/headers/christmas/thumbprints.jpg", "/assets/img/headers/christmas/glazed-sugar.jpg", "/assets/img/headers/christmas/snowball.jpg", "/assets/img/headers/christmas/buckeyes.jpg", "/assets/img/headers/christmas/cashews.jpg", "/assets/img/headers/christmas/christmas_header.jpg"] 
+cover-img: ["/assets/img/headers/home/bread.jpg", "/assets/img/headers/home/buckeyes.jpg", "/assets/img/headers/home/cashews.jpg", "/a
+ssets/img/headers/home/christmas_header.jpg", "/assets/img/headers/home/gingerbread.jpg", "/assets/img/headers/home/glazed-sugar.jpg",
+ "/assets/img/headers/home/grinch.jpg", "/assets/img/headers/home/oatmeal-shortbread.jpg", "/assets/img/headers/home/snowball.jpg", "/
+assets/img/headers/home/teacher-box.jpg", "/assets/img/headers/home/thumbprint.jpg"]
 ---
 
 <h1 class="text-center">Best Sellers</h1>
