Updated images again again

--- a/index.html
+++ b/index.html
@@ -2,10 +2,8 @@
 layout: home
 title: Thymeless Treats Bakery
 subtitle: stuff about treats stuff
-cover-img: ["/assets/img/headers/home/christmasCookies.jpg", "/assets/img/headers/home/cranMuffins.jpg", "/assets/img/headers/home/cup
-cakes1.jpg", "/assets/img/headers/home/gingerbread.jpg", "/assets/img/headers/home/grinch.jpg", "/assets/img/headers/home/halloweenCoo
-kies.jpg", "/assets/img/headers/home/halloweenCupcakes.jpg", "/assets/img/header
-s/home/mini_cranBread.jpg", "/assets/img/headers/home/thumbprint.jpg", "/assets/img/headers/home/Valentines.jpg"]
+cover-img: ["/assets/img/headers/home/christmasCookies.jpg", "/assets/img/headers/home/cranMuffins.jpg", "/assets/img/headers/home/cupcakes1.jpg", "/assets/img/headers/home/gingerbread.jpg", "/assets/img/headers/home/grinch.jpg", 
+"/assets/img/headers/home/halloweenCupcakes.jpg", "/assets/img/headers/home/thumbprint.jpg", "/assets/img/headers/home/Valentines.jpg"]
 ---
     
 <div class="row justify-content-center">
