Social links in header. About Me placeholder

--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 ---
 layout: home
 title: Thymeless Treats Bakery
-subtitle: stuff about treats stuff
+subtitle: Where Every Bite is Timelessly Delicious!
 cover-img: ["/assets/img/headers/home/christmasCookies.jpg", "/assets/img/headers/home/cranMuffins.jpg", "/assets/img/headers/home/cupcakes1.jpg", "/assets/img/headers/home/gingerbread.jpg", "/assets/img/headers/home/grinch.jpg", 
 "/assets/img/headers/home/halloweenCupcakes.jpg", "/assets/img/headers/home/thumbprint.jpg", "/assets/img/headers/home/Valentines.jpg"]
+show_social_links: true
 ---
     
 <div class="row justify-content-center">
