--- a/christmas.html
+++ b/christmas.html
@@ -1,8 +1,9 @@
 ---
 layout: home
 title: Thymeless Treats Bakery
-subtitle: stuff about treats stuff
+subtitle: Where Every Bite is Timelessly Delicious!
 cover-img: ["/assets/img/headers/home/gingerbread.jpg", "/assets/img/headers/home/grinch.jpg", "/assets/img/headers/home/thumbprint.jpg"]
+show_social_links: true
 ---
 
 <h1 class="text-center">Best Sellers</h1>
@@ -34,7 +35,7 @@ cover-img: ["/assets/img/headers/home/gingerbread.jpg", "/assets/img/headers/hom
     {% include card.html 
         image='/assets/img/buckeyes.jpg' 
         title='Buckeyes' 
-        text='$69'
+        text='$10'
         modal_target='#modalBuckeyes' 
         alt='Buckeyes' 
     %}
@@ -42,8 +43,8 @@ cover-img: ["/assets/img/headers/home/gingerbread.jpg", "/assets/img/headers/hom
         modal_id='modalBuckeyes' 
         modal_title='Christmas Best Sellers' 
         modal_body='...'
-        modal_disclaimer=''
-        modal_price='$69 per batch'
+        modal_disclaimer='Contains nuts'
+        modal_price='$10 per dozen'
         modal_alt='Buckeyes' 
         modal_image='/assets/img/buckeyes.jpg' 
     %}
@@ -152,14 +153,14 @@ cover-img: ["/assets/img/headers/home/gingerbread.jpg", "/assets/img/headers/hom
             modal_body="🎄These classic Christmas cookies will melt in your mouth and are worth every bit of powdered sugar that WILL get all over your favorite Christmas sweater.<br><br>❄️IYKYK!❄️<br><br> Although a classic, these are slightly different than you may be used to as they do not contain pecans. So they are *nut-friendly!"
             modal_disclaimer="*Made with nut-free ingredients; however, produced in a facility where nuts are present."
             modal_alt='Snowball Cookies' 
-            modal_price='$2 per cookie'
+            modal_price='$16 per pound'
             modal_image='/assets/img/snowball.jpg' %}
 
         <!-- Column 2 (Buckeyes) -->
         {% include card.html 
             image='/assets/img/buckeyes.jpg' 
             title='Buckeyes' 
-            text='$69'
+            text='$10'
             modal_target='#modalBuckeyes' 
             alt='Buckeyes' 
         %}
@@ -167,8 +168,8 @@ cover-img: ["/assets/img/headers/home/gingerbread.jpg", "/assets/img/headers/hom
             modal_id='modalBuckeyes' 
             modal_title='Christmas Menu' 
             modal_body='...'
-            modal_disclaimer=''
-            modal_price='$69 per batch'
+            modal_disclaimer='Contains nuts'
+            modal_price='$10 per dozen'
             modal_alt='Buckeyes' 
             modal_image='/assets/img/buckeyes.jpg' 
         %}
