Updates to valentines page

--- a/valentines.html
+++ b/valentines.html
@@ -4,6 +4,7 @@ title: Thymeless Treats Bakery
 subtitle: Where Every Bite is Timelessly Delicious!
 cover-img: "/assets/img/headers/home/Valentines.jpg"
 show_social_links: true
+permalink: /valentines/
 ---
 
 <div class="row justify-content-center">
