Added Valentine Menu for 2024

--- a/index.html
+++ b/index.html
@@ -7,9 +7,16 @@ cover-img: ["/assets/img/headers/home/christmasCookies.jpg", "/assets/img/header
 show_social_links: true
 ---
     
-<div class="row justify-content-center">
-    <div class="col-auto">
-        <!-- Replace 'your-image.jpg' with the path to your image -->
-        <img src="/assets/img/closed.jpg" class="img-fluid" alt="SOLD OUT">
+<div class="container">
+    <div class="row justify-content-center">
+      <div class="col-auto">
+        <!-- Image 1 -->
+        <img src="/assets/img/valentines/menu2.png" class="img-fluid" alt="First Image">
+      </div>
+      <div class="col-auto">
+        <!-- Image 2 -->
+        <img src="/assets/img/valentines/menu1.png" class="img-fluid" alt="Second Image">
+      </div>
     </div>
-</div>
+  </div>
+  
