Added an order form to the site

--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@ show_social_links: true
     <div class="row justify-content-center">
       <div class="col-auto">
         <!-- Image 1 -->
-        <img src="/assets/img/valentines/menu2.png" class="img-fluid" alt="First Image">
+        <img src="/assets/img/valentines/menu1.jpg" class="img-fluid" alt="First Image">
       </div>
       <div class="col-auto">
         <!-- Image 2 -->
-        <img src="/assets/img/valentines/menu1.png" class="img-fluid" alt="Second Image">
+        <img src="/assets/img/valentines/menu2.jpg" class="img-fluid" alt="Second Image">
       </div>
     </div>
   </div>
