Updated Christmas Menu to reflect it's out of season

--- a/christmas.html
+++ b/christmas.html
@@ -1,10 +1,14 @@
 ---
 layout: home
-title: Thymeless Treats Bakery
+title: Christmas Menu
 subtitle: Where Every Bite is Timelessly Delicious!
 cover-img: ["/assets/img/headers/home/gingerbread.jpg", "/assets/img/headers/home/grinch.jpg", "/assets/img/headers/home/thumbprint.jpg"]
 show_social_links: true
 ---
+
+<div class="alert text-center" role="alert" style="background-color: #e6d7d0; color: #333;">
+    <strong>Thank you for a wonderful holiday season!</strong> Our Christmas Menu is now closed. Stay tuned for our upcoming specials!
+</div>
 
 <h1 class="text-center">Best Sellers</h1>
 
