Adding Easter Menu to site

--- a/valentines.html
+++ b/valentines.html
@@ -7,6 +7,10 @@ show_social_links: true
 permalink: /valentines/
 ---
 
+<div class="alert text-center" role="alert" style="background-color: #e6d7d0; color: #333;">
+  <strong>Thank you for all of the love!</strong> Our Valentine's Menu is now closed. Stay tuned for our upcoming specials!
+</div>
+
 <div class="container">
     <div class="row justify-content-center">
          <div class="col-auto">
