--- a/index.html
+++ b/index.html
@@ -2,21 +2,15 @@
 layout: home
 title: Thymeless Treats Bakery
 subtitle: Where Every Bite is Timelessly Delicious!
-cover-img: ["/assets/img/headers/home/christmasCookies.jpg", "/assets/img/headers/home/cranMuffins.jpg", "/assets/img/headers/home/cupcakes1.jpg", "/assets/img/headers/home/gingerbread.jpg", "/assets/img/headers/home/grinch.jpg", 
-"/assets/img/headers/home/halloweenCupcakes.jpg", "/assets/img/headers/home/thumbprint.jpg", "/assets/img/headers/home/Valentines.jpg"]
+cover-img: ["/assets/img/easter/IMG_6388.jpg", "/assets/img/easter/IMG_6394.jpg", "/assets/img/easter/IMG_6434.jpg", "/assets/img/headers/home/christmasCookies.jpg", "/assets/img/headers/home/cranMuffins.jpg", "/assets/img/headers/home/cupcakes1.jpg", "/assets/img/headers/home/gingerbread.jpg", "/assets/img/headers/home/grinch.jpg", 
+"/assets/img/headers/home/halloweenCupcakes.jpg", "/assets/img/headers/home/thumbprint.jpg", "/assets/img/headers/home/Valentines.jpg", "/assets/img/easter/IMG_6471.jpg"]
 show_social_links: true
 ---
     
-<div class="container">
-    <div class="row justify-content-center">
-      <div class="col-auto">
-        <!-- Image 1 -->
-        <img src="/assets/img/valentines/menu1.jpg" class="img-fluid" alt="First Image">
-      </div>
-      <div class="col-auto">
-        <!-- Image 2 -->
-        <img src="/assets/img/valentines/menu2.jpg" class="img-fluid" alt="Second Image">
-      </div>
-    </div>
-  </div>
-  
+<div class="alert text-center" role="alert" style="background-color: #fdfd96; color: #333;">
+  <strong>Get ready!</strong> Orders will open this evening for our <a href="https://www.thymelesstreatsbakery.com/easter/" style="color: #333; font-weight: bold; text-decoration: underline;">Easter Specials</a>! 🥕🐇
+</div>
+
+
+
+
