Easter orders are a go!

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ show_social_links: true
 ---
     
 <div class="alert text-center" role="alert" style="background-color: #fdfd96; color: #333;">
-  <strong>Get ready!</strong> Orders will open this evening for our <a href="https://www.thymelesstreatsbakery.com/easter/" style="color: #333; font-weight: bold; text-decoration: underline;">Easter Specials</a>! 🥕🐇
+  <strong>Easter orders are live!</strong> <a href="https://www.thymelesstreatsbakery.com/easter/" style="color: #333; font-weight: bold; text-decoration: underline;">Easter Specials</a>! 🥕🐇
 </div>
 
 
