Mothers day changes

--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 layout: home
 title: Thymeless Treats Bakery
 subtitle: Where Every Bite is Timelessly Delicious!
-cover-img: ["/assets/img/easter/IMG_6388.jpg", "/assets/img/easter/IMG_6394.jpg", "/assets/img/easter/IMG_6434.jpg", "/assets/img/headers/home/christmasCookies.jpg", "/assets/img/headers/home/cranMuffins.jpg", "/assets/img/headers/home/cupcakes1.jpg", "/assets/img/headers/home/gingerbread.jpg", "/assets/img/headers/home/grinch.jpg", 
+cover-img: ["/assets/img/mothersday/1.jpg", "/assets/img/bridalShower.jpg", "/assets/img/easter/IMG_6388.jpg", "/assets/img/easter/IMG_6394.jpg", "/assets/img/easter/IMG_6434.jpg", "/assets/img/headers/home/christmasCookies.jpg", "/assets/img/headers/home/cranMuffins.jpg", "/assets/img/headers/home/cupcakes1.jpg", "/assets/img/headers/home/gingerbread.jpg", "/assets/img/headers/home/grinch.jpg", 
 "/assets/img/headers/home/halloweenCupcakes.jpg", "/assets/img/headers/home/thumbprint.jpg", "/assets/img/headers/home/Valentines.jpg", "/assets/img/easter/IMG_6471.jpg"]
 show_social_links: true
 ---
     
 <div class="alert text-center" role="alert" style="background-color: #fdfd96; color: #333;">
-  <strong>Easter orders are live!</strong> <a href="https://www.thymelesstreatsbakery.com/easter/" style="color: #333; font-weight: bold; text-decoration: underline;">Easter Specials</a>! 🥕🐇
+  <strong>Mother's Day Orders are closed! Thank you for your support!</strong>
 </div>
 
 
