Mothers day changes

--- a/mothersday.html
+++ b/mothersday.html
@@ -18,12 +18,12 @@ permalink: /mothersday/
           image='/assets/img/mothersday/1.jpg' 
           text='$22'
           modal_target='#modalMothersDayBox' 
-          title='Mother's Day Floral Cupcake Box'
+          title='Mothers Day Floral Cupcake Box'
           alt='Easter Cookie Box' 
       %}
       {% include modal.html 
         modal_id='modalMothersDayBox'
-        modal_title='Mother's Day Floral Cupcake Box'
+        modal_title='Mothers Day Floral Cupcake Box'
         modal_body='An assortment of beautiful floral cupcakes<br><br>Includes<br>- (6) Vanilla Buttercream Cupcakes'
         modal_disclaimer=''
         modal_price='$22 per box'
