Mothers day changes

--- a/mothersday.html
+++ b/mothersday.html
@@ -22,13 +22,13 @@ permalink: /mothersday/
           alt='Easter Cookie Box' 
       %}
       {% include modal.html 
-        modal_id='modalMothersDayBox'
-        modal_title='Mothers Day Floral Cupcake Box'
+        modal_id="modalMothersDayBox"
+        modal_title="Mothers Day Floral Cupcake Box"
         modal_body='An assortment of beautiful floral cupcakes<br><br>Includes<br>- (6) Vanilla Buttercream Cupcakes'
-        modal_disclaimer=''
-        modal_price='$22 per box'
-        modal_alt='Mother's Day Box'
-        modal_image='/assets/img/mothersday/1.jpg'
-      %}
+        modal_disclaimer=""
+        modal_price="$22 per box"
+        modal_alt="Mother's Day Box"
+        modal_image="/assets/img/mothersday/1.jpg"
+    %}
     </div>
   
