--- a/menu.html
+++ b/menu.html
@@ -1,11 +1,48 @@
 ---
-layout: page
-title: Menu
+layout: home
 ---
-
-<div class="row justify-content-center">
-    <div class="col-auto">
-        <!-- Replace 'your-image.jpg' with the path to your image -->
-        <img src="/assets/img/construction.jpg" class="img-fluid" alt="Under Construction">
-    </div>
+    
+<div class="homepage-category-cards">
+  <div class="category-card">
+    <a href="{{ '/cookies' | relative_url }}">
+      <img src="/assets/img/homepageCookie.jpg" alt="Cookie Menu" class="card-img">
+      <div class="card-content">
+        <h2>Cookies</h2>
+      </div>
+    </a>
+  </div>
+  <div class="category-card">
+    <a href="{{ '/cakes' | relative_url }}">
+      <img src="/assets/img/homepageCake.jpg" alt="Cupcake Menu" class="card-img">
+      <div class="card-content">
+        <h2>Cakes</h2>
+      </div>
+    </a>
+  </div>
+  <div class="category-card">
+    <a href="{{ '/gifts' | relative_url }}">
+      <img src="/assets/img/teacher-box.jpg" alt="Teacher Boxes" class="card-img">
+      <div class="card-content">
+        <h2>Gifts</h2>
+      </div>
+    </a>
+  </div>
+  <div class="category-card">
+    <a href="{{ '/holidays' | relative_url }}">
+      <img src="/assets/img/headers/home/christmasCookies.jpg" alt="Holiday Menu" class="card-img">
+      <div class="card-content">
+        <h2>Holiday Collection</h2>
+      </div>
+    </a>
+  </div>
+  <div class="category-card">
+    <a href="{{ '/catering' | relative_url }}">
+      <img src="/assets/img/bridalShower.jpg" alt="Special Occasions" class="card-img">
+      <div class="card-content">
+        <h2>Special Occasions</h2>
+      </div>
+    </a>
+  </div>
+  <!-- Add more cards as needed -->
 </div>
+
