--- a/index.html
+++ b/index.html
@@ -6,8 +6,27 @@ cover-img: ["/assets/img/mothersday/1.jpg", "/assets/img/bridalShower.jpg", "/as
 "/assets/img/headers/home/halloweenCupcakes.jpg", "/assets/img/headers/home/thumbprint.jpg", "/assets/img/headers/home/Valentines.jpg", "/assets/img/easter/IMG_6471.jpg"]
 show_social_links: true
 ---
+
+
+<!-- Featured Menu Section -->
+<div class="menu-page">
+  <h2 class="menu-header-featured">Featured Menu</h2>
+  <div style="text-align: center; margin: 40px 0;">
+    <a href="{{ '/thanksgiving/' | relative_url }}">
+      <img src="/assets/img/thanksgivingMenu.jpg" alt="Thanksgiving Menu" class="full-menu-img" style="max-width: 90%; height: auto; border-radius: 15px;">
+    </a>
+  </div>
+</div>
     
 <div class="homepage-category-cards">
+  <div class="category-card">
+    <a href="{{ '/holidays' | relative_url }}">
+      <img src="/assets/img/headers/home/christmasCookies.jpg" alt="Holiday Menu" class="card-img">
+      <div class="card-content">
+        <h2>Holiday Collection</h2>
+      </div>
+    </a>
+  </div>
   <div class="category-card">
     <a href="{{ '/cookies' | relative_url }}">
       <img src="/assets/img/homepageCookie.jpg" alt="Cookie Menu" class="card-img">
@@ -29,14 +48,6 @@ show_social_links: true
       <img src="/assets/img/teacher-box.jpg" alt="Teacher Boxes" class="card-img">
       <div class="card-content">
         <h2>Gifts</h2>
-      </div>
-    </a>
-  </div>
-  <div class="category-card">
-    <a href="{{ '/holidays' | relative_url }}">
-      <img src="/assets/img/headers/home/christmasCookies.jpg" alt="Holiday Menu" class="card-img">
-      <div class="card-content">
-        <h2>Holiday Collection</h2>
       </div>
     </a>
   </div>
